admin-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: adminer
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: NodePort
  selector:
    app: admin
  ports:
    - protocol: TCP
      nodePort: 30002
      port: 8080
      targetPort: 8080
