app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app 
    spec:
      containers:
        - name: students-database-dotnet-docker-app
          image: students-database-dotnet-docker_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - nodePort: 30001
      port: 5000
      targetPort: 5000
