db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgdb
  template:
    metadata:
      labels:
        app: pgdb 
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: pgdb
    # eks-asp-ra-postgress-deploy      // also worked
  ports:
    - port: 5432
      targetPort: 5432
